# magic_config

./: .clang-format  .gitconfig  .gitignore  LICENSE  README.md  meson.build
dynamic_json/: Config.hpp  Converters.h  Converters.hpp  ConvertersAux.hpp  Traits.hpp  import_json.hpp  meson.build
dynamic_json/tests/: convert_json.t.cpp  json_config.t.cpp  meson.build  test_script.py
examples/: AdvancedValidation.cpp  Basic.cpp  BasicValidation.cpp  Composite.cpp  Inheritance.cpp  Setup.hpp  ThirdPartyLibNonSTL.cpp  ThirdPartyLibSTL.cpp  meson.build
magic/: Loader.hpp  PropertyChecks.h  meson.build
magic/detail/: ClassMember.hpp  DispatchConverter.hpp  error.hpp  meson.build  traits.hpp  traits.t.cpp  type2str.hpp
magic/detail/traits/: container_traits.hpp  container_traits.t.cpp  define_trait.hpp  define_trait.t.cpp  features.hpp  logical.hpp  meson.build  one_of.hpp  optional.hpp  optional.t.cpp  supported_types.hpp
yaml/: Config.hpp  Converters.h  Converters.hpp  ConvertersAux.hpp  Traits.hpp  import_yaml.hpp  meson.build
yaml/tests/: convert_yaml.t.cpp  meson.build  test_script.json  yaml_config.t.cpp
