
define_trait_test = executable('define_trait', 'define_trait.t.cpp',
			       include_directories : root_include,
			       dependencies : dep_gtest)

test('define_trait_test', define_trait_test)


container_traits_test = executable('container_traits', 'container_traits.t.cpp',
				   include_directories : root_include,
				   dependencies : dep_gtest)

test('container_traits_test', container_traits_test)
