
mc_define_trait_test = executable('mc_define_trait', 'define_trait.t.cpp',
			       include_directories : root_include,
			       dependencies : dep_gtest)

test('mc_define_trait_test', mc_define_trait_test)


mc_optional_test = executable('mc_optional', 'optional.t.cpp',
			       include_directories : root_include,
			       dependencies : dep_gtest)

test('mc_optional_test', mc_optional_test)


mc_container_traits_test = executable('mc_container_traits', 'container_traits.t.cpp',
				   include_directories : root_include,
				   dependencies : dep_gtest)

test('mc_container_traits_test', mc_container_traits_test)
